src/css/button.css
.buttons-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.buttons-container .button {
  border: none;
  border-radius: 4px;
  font: var(--button);
  padding-block: 0.75rem;
  padding-inline: 1.5rem;
  background: none;
  transition: all 0.3s ease;
}

.buttons-container .button:active {
  transform: scale(0.95);
}

.button.is-secondary {
  border: 1px solid var(--primary);
  color: var(--primary);
}

.button.is-secondary:hover {
  background: var(--grey);
}

.button.is-primary {
  background: var(--primary);
  color: var(--white);
}

.button.is-primary:hover {
  background: var(--button-background);
}

@media screen and (min-width: 768px) {
  .buttons-container {
    align-items: flex-start;
  }
}

